updated schema, alt tags, meta description

--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Trends Project | The Design | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
 
-    <meta name="description" content="Explore the design behind the Tech Trends Project by Genny Allison. This page highlights AI-powered layout, SEO-optimized visuals, responsive design techniques, and WCAG accessibility." />
-
+    <meta name="description" content="Discover the creative design process behind the Tech Trends Project by Genny Allison. This case study showcases responsive web design, AI-generated content, SEO optimization, accessibility (WCAG), and lightning-fast Core Web Vitals—all part of her AI Content Creator & SEO Specialist portfolio." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
@@ -416,7 +415,7 @@
           <!-- Fallback ≤480px -->
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1748537741/sports-tube-mobile_j2lush.avif"
-            alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
+            alt="Responsive hero image of the Tech Trends Project design from Genny Allison’s AI Content and SEO portfolio"
             width="220"
             height="184"
             style="aspect-ratio: 220 / 184; object-fit: cover;"
@@ -454,7 +453,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_256/v1748540222/my-inspiration_equnnj.avif"
-              alt=""
+              alt="Homepage design inspiration featuring bold visuals, modular layout, and dynamic content used to influence the Tech Trends Project by AI content creator and SEO specialist Genny Allison"
               width="256"
               height="343"
               loading="auto"  
@@ -498,7 +497,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624/v1741126228/sports-tube-design_zw8u15.avif"
-              alt=""
+              alt="Design inspiration mood board for the Tech Trends Project, showcasing colors, typography, and layout concepts"
               width="256"
               height="343"
               loading="auto"  
@@ -542,8 +541,7 @@
             />
             <img 
               src="/img/sports-tube-homepage.avif"
-              alt="Wireframe of the homepage layout for Tech Trends Blog"
-              object-fit="cover"
+              alt="Homepage wireframe layout for Tech Trends Blog highlighting responsive structure and navigation design"
               width="273"
               height="auto"
               loading="lazy"
@@ -569,7 +567,7 @@
             />
             <img 
               src="/img/sports-tube-all-videos-wireframe.avif"
-              alt="Wireframe of the homepage layout for Tech Trends Blog"
+              alt="Wireframe of the All Videos page layout for the Tech Trends Blog, emphasizing grid-based content organization"
               object-fit="cover"
               width="273"
               height="auto"
@@ -580,7 +578,7 @@
             />
           </picture>
         </div>
-        <div class="wireframe-img fancy-border-img" id="wireframe-img3">
+        <div class="wireframe-img fancy-border-img" id="st-wireframe-img3">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_1990/v1741213655/Single_Video_Page_m8chqc.avif"
@@ -596,7 +594,7 @@
             />
             <img 
               src="/img/sports-tube-single-video-wirefame.avif"
-              alt="Wireframe of the article page layout for Tech Trends Blog"
+              alt="Wireframe layout of an article page for the Tech Trends Blog, focused on structured content delivery and user flow"
               object-fit="cover"
               width="273"
               height="auto"
@@ -626,7 +624,7 @@
               src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_368,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
               width="268" 
               height="116" 
-              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              alt="Portrait of Genny Allison, Front-End Developer and AI Content Specialist at Allison Stock Inc."
               style="aspect-ratio: 268 / 116; object-fit: contain;"
               loading="auto" 
               decoding="async" 
