--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Trends Project | The Grade | AI Content Creator & SEO Specialist Portfolio Project | Genny Allison</title>
-
-    <meta name="description" content="Genny Allison's AI Content Creator & SEO Specialist portfolio project showcases how she achieved a 100/100 PageSpeed Insights score through Core Web Vitals optimization, performance-driven design, and AI-powered image and content enhancements.">
-
+    <meta name="description" content="Discover how Genny Allison achieved a perfect 100/100 PageSpeed Insights score using AI-powered content, SEO optimization strategies, and Core Web Vitals improvements. This case study highlights performance-driven web design and image enhancements for fast, responsive websites.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
     <!-- Desktop ≥ 941px -->
@@ -69,11 +66,16 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "WebPage",
-        "name": "Tech Trends Project | The Design",
-        "url": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-design.html",
-        "description": "Explore the design behind the Tech Trends Project by Genny Allison. This page highlights AI-powered layout, SEO-optimized visuals, responsive design techniques, and WCAG accessibility.",
-        "datePublished": "2025-05-28",
+        "@type": "BlogPosting",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://tech-trends-blog.netlify.app/pages/project2/project2-the-grade.html"
+        },
+        "headline": "The Grade: 100/100 PageSpeed Case Study | AI SEO Optimization",
+        "description": "Explore how Genny Allison achieved a perfect 100/100 PageSpeed Insights score using AI-generated content, image optimization, Core Web Vitals improvements, and SEO best practices. A performance-driven case study from an AI Content Creator and SEO Specialist.",
+        "image": "https://res.cloudinary.com/dnptzisuf/image/upload/v1743469949/seo-grade_mmztmf.avif",
+        "datePublished": "2024-05-25",
+        "dateModified": "2024-05-29",
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
@@ -96,40 +98,12 @@
             "height": 109
           }
         },
-        "mainEntity": {
-          "@type": "CreativeWork",
+        "keywords": "AI content creator, SEO specialist, PageSpeed Insights 100, Core Web Vitals, image optimization, fast-loading website design, AI SEO content, performance-driven web design, Genny Allison portfolio",
+        "articleSection": "Case Study",
+        "isPartOf": {
+          "@type": "Blog",
           "name": "Tech Trends Blog",
-          "url": "https://tech-trends-blog.netlify.app",
-          "description": "An AI-powered SEO blog highlighting the latest trends in digital design, technology, and content strategy."
-        },
-        "breadcrumb": {
-          "@type": "BreadcrumbList",
-          "itemListElement": [
-            {
-              "@type": "ListItem",
-              "position": 1,
-              "name": "Home",
-              "item": "https://gennyallison.netlify.app/"
-            },
-            {
-              "@type": "ListItem",
-              "position": 2,
-              "name": "Projects",
-              "item": "https://gennyallison.netlify.app/pages/collections.html"
-            },
-            {
-              "@type": "ListItem",
-              "position": 3,
-              "name": "Tech Trends Project",
-              "item": "https://tech-trends-blog.netlify.app"
-            },
-            {
-              "@type": "ListItem",
-              "position": 4,
-              "name": "The Design",
-              "item": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-design.html"
-            }
-          ]
+          "url": "https://tech-trends-blog.netlify.app"
         }
       }
     </script>
@@ -416,7 +390,7 @@
           <!-- Fallback ≤480px -->
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1748537741/sports-tube-mobile_j2lush.avif"
-            alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
+            alt="Hero image of Sports Tube, a high-performance sports blog built by Genny Allison featuring AI content and PageSpeed optimization"
             width="220"
             height="184"
             style="aspect-ratio: 220 / 184; object-fit: cover;"
@@ -455,7 +429,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_232/v1743469949/seo-grade_mmztmf.avif"
-              alt="AI-powered SEO grade result from Tech Trends Blog showing Core Web Vitals optimization"
+              alt="Tech Trends Blog SEO scorecard showing AI-optimized performance and perfect Core Web Vitals"
               width="232"
               height="193"
               style="object-fit: contain; aspect-ratio: 232 / 193;"
@@ -507,10 +481,10 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_640/v1748543676/st-desktop-pagespeed-grade_ig6u8i.avif"
-              alt="SEO Desktop performance result after AI content and PageSpeed optimization on Tech Trends Blog"
+              alt="Tech Trends Blog SEO scorecard showing AI-optimized performance and perfect Core Web Vitals"
               width="320"
-              height="193"
-              style="object-fit: contain; aspect-ratio: 320 / 193;"
+              height="185"
+              style="object-fit: contain; aspect-ratio: 320 / 185;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -596,7 +570,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624/v1748543676/st-mobile-pagespeed-grade_ujfksc.avif"
-              alt="Tech Trends Blog SEO Mobile grade result showing performance after optimization"
+              alt="Tech Trends Blog SEO scorecard showing AI-optimized performance and perfect Core Web Vitals"
               width="100%"
               height="auto"
               style="object-fit: contain; "
@@ -684,7 +658,7 @@
             />
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_640/v1748545397/st-hubspot-grade_zqnbpd.avif"
-              alt="HubSpot grade showing SEO performance score for Tech Trends Blog"
+              alt="HubSpot grade showing high SEO performance for Tech Trends Blog using AI-powered web development"
               width="320"
               height="458"
               style="object-fit: cover;"
@@ -713,7 +687,7 @@
               src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_368,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
               width="268" 
               height="116" 
-              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              alt="Portrait of Genny Allison, Front-End Developer and SEO &AI Content Specialist at Allison Stock Inc."
               style="aspect-ratio: 268 / 116; object-fit: contain;"
               loading="auto" 
               decoding="async" 
@@ -768,7 +742,7 @@
             />
             <img       
               src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_500,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              alt="Genny Allison’s company logo for Allison Stock Inc. showcasing expertise in AI web development and SEO content"
               width="250"
               height="109"
               loading="lazy"
