--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -628,7 +628,7 @@
               src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_368,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
               width="268" 
               height="116" 
-              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              alt="Portrait of Genny Allison, Front-End Developer and SEO &AI Content Specialist at Allison Stock Inc."
               style="aspect-ratio: 268 / 116; object-fit: contain;"
               loading="auto" 
               decoding="async" 
