--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -568,8 +568,7 @@
             <img 
               src="/img/sports-tube-all-videos-wireframe.avif"
               alt="Wireframe of the All Videos page layout for the Tech Trends Blog, emphasizing grid-based content organization"
-              object-fit="cover"
-              width="273"
+              width="252"
               height="auto"
               loading="lazy"
               fetchpriority="low"
@@ -595,12 +594,11 @@
             <img 
               src="/img/sports-tube-single-video-wirefame.avif"
               alt="Wireframe layout of an article page for the Tech Trends Blog, focused on structured content delivery and user flow"
-              object-fit="cover"
-              width="273"
+              width="252"
               height="auto"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover; "
+              style="object-fit: contain; "
               decoding="async" 
             />
           </picture>
@@ -624,7 +622,7 @@
               src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_368,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
               width="268" 
               height="116" 
-              alt="Portrait of Genny Allison, Front-End Developer and AI Content Specialist at Allison Stock Inc."
+              alt="Portrait of Genny Allison, Front-End Developer and SEO &AI Content Specialist at Allison Stock Inc."
               style="aspect-ratio: 268 / 116; object-fit: contain;"
               loading="auto" 
               decoding="async" 
