ensured all picture tags have max-width

--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -619,11 +619,11 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_368,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
-              width="268" 
-              height="116" 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_610,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              width="305" 
+              height="151" 
               alt="Portrait of Genny Allison, Front-End Developer and SEO &AI Content Specialist at Allison Stock Inc."
-              style="aspect-ratio: 268 / 116; object-fit: contain;"
+              style="object-fit: contain;"
               loading="auto" 
               decoding="async" 
             />
