updated preload links, removed inline aspect-ratios

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -631,7 +631,6 @@
               loading="auto" 
               decoding="async" 
             />
-
           </picture> 
           <div class="author-bio-text">
             <h3>Partner with an AI Content Specialist & Web Developer</h3>
@@ -688,6 +687,7 @@
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
+              style-"object-fit: cover;"
             />
           </picture>
         </div>
