--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -15,7 +15,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_737/v1748537741/sports-tube-desktop_c9qmdx.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1748537741/sports-tube-desktop_c9qmdx.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -25,7 +25,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_354/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -35,7 +35,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_287/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -45,7 +45,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220/v1748537741/sports-tube-mobile_j2lush.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1748537741/sports-tube-mobile_j2lush.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -424,7 +424,7 @@
             alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
             width="220"
             height="184"
-            style="aspect-ratio: 220 / 184; object-fit: cover;"
+            style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
@@ -482,7 +482,7 @@
                   width="118"
                   height="97"
                   loading="auto"  
-                  style="aspect-ratio: 118 / 97; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -511,7 +511,7 @@
                   width="119"
                   height="99"
                   loading="auto"  
-                  style="aspect-ratio: 119 / 99; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -537,11 +537,10 @@
                 <img 
                   src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_238/v1748535555/sports-tube-design-thumbnail_teg4mq.avif"
                   alt="Sports Tube web design concept combining ESPN+ style layout with bold Bebas Neue typography and a red, white, blue color palette"
-
                   width="119"
                   height="99"
                   loading="auto"  
-                  style="aspect-ratio: 119 / 99; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -570,7 +569,7 @@
                   width="119"
                   height="99"
                   loading="auto"  
-                  style="aspect-ratio: 119 / 99; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -599,7 +598,7 @@
                   width="119"
                   height="99"
                   loading="auto"  
-                  style="aspect-ratio: 119 / 99; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -629,7 +628,7 @@
               width="268" 
               height="116" 
               alt="Portrait of Genny Allison, Front-End Developer and SEO &AI Content Specialist at Allison Stock Inc."
-              style="aspect-ratio: 268 / 116; object-fit: contain;"
+              style="object-fit: contain;"
               loading="auto" 
               decoding="async" 
             />
@@ -689,6 +688,7 @@
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
+              style-"object-fit: cover;"
             />
           </picture>
         </div>
