--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -12,7 +12,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_737/v1748537741/sports-tube-desktop_c9qmdx.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1748537741/sports-tube-desktop_c9qmdx.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -22,7 +22,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_354/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -32,7 +32,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_287/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -42,7 +42,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220/v1748537741/sports-tube-mobile_j2lush.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1748537741/sports-tube-mobile_j2lush.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -393,7 +393,7 @@
             alt="Hero image of Sports Tube, a high-performance sports blog built by Genny Allison featuring AI content and PageSpeed optimization"
             width="220"
             height="184"
-            style="aspect-ratio: 220 / 184; object-fit: cover;"
+            style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
@@ -432,7 +432,7 @@
               alt="Tech Trends Blog SEO scorecard showing AI-optimized performance and perfect Core Web Vitals"
               width="232"
               height="193"
-              style="object-fit: contain; aspect-ratio: 232 / 193;"
+              style="object-fit: contain;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -484,7 +484,7 @@
               alt="Tech Trends Blog SEO scorecard showing AI-optimized performance and perfect Core Web Vitals"
               width="320"
               height="185"
-              style="object-fit: contain; aspect-ratio: 320 / 185;"
+              style="object-fit: contain;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -494,7 +494,7 @@
         <div class="resume-date fancy-border project-sub-title">
           <h2>where we started</h2>
         </div>
-        <div class="pagespeed-container fancy-border-img" id="pagespeed2">
+        <div class="pagespeed-container fancy-border-img" id="pagespeed">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_659/v1741126229/starting-grade_yhczhj.avif"
@@ -513,7 +513,7 @@
               alt="PageSpeed Insights comparison showing the website's performance before optimization"
               width="248"
               height="255"
-              style="object-fit: cover; aspect-ratio: 248 / 255;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -524,7 +524,7 @@
           <h3>where we finished</h3>
         </div>
 
-        <div class="pagespeed-container fancy-border-img" id="pagespeed2">
+        <div class="pagespeed-container fancy-border-img" id="pagespeed">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_659/v1741120438/chrome-capture-2025-2-28_vqfr2b.avif"
@@ -543,7 +543,7 @@
               alt="PageSpeed Insights comparison showing the website's performance after optimization"
               width="248"
               height="255"
-              style="object-fit: cover; aspect-ratio: 248 / 255;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -602,7 +602,7 @@
               alt="PageSpeed Insights comparison showing the website's performance before optimization"
               width="248"
               height="255"
-              style="object-fit: cover; aspect-ratio: 248 / 255;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -631,7 +631,7 @@
               alt="PageSpeed Insights comparison showing the website's performance after optimization"
               width="232"
               height="239"
-              style="object-fit: cover; aspect-ratio: 232 / 239;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -688,7 +688,7 @@
               width="268" 
               height="116" 
               alt="Portrait of Genny Allison, Front-End Developer and SEO &AI Content Specialist at Allison Stock Inc."
-              style="aspect-ratio: 268 / 116; object-fit: contain;"
+              style="object-fit: contain;"
               loading="auto" 
               decoding="async" 
             />
@@ -748,6 +748,7 @@
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
+              style-"object-fit: cover;"
             />
           </picture>
         </div>
