--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -14,7 +14,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_737/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -24,7 +24,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_354/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -34,7 +34,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_287/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -44,7 +44,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -422,32 +422,32 @@
         <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_737/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_354/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_287/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
 
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
             width="220"
             height="184"
-            style="aspect-ratio: 220 / 184; object-fit: cover;"
+            style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
@@ -598,7 +598,7 @@
               width="268" 
               height="116" 
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              style="aspect-ratio: 268 / 116; object-fit: contain;"
+              style="object-fit: contain;"
               loading="auto" 
               decoding="async" 
             />
@@ -658,6 +658,7 @@
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
+              style="object-fit: contain;"
             />
           </picture>
         </div>
