--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -15,7 +15,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_737/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -25,7 +25,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_354/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -35,7 +35,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_287/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -45,7 +45,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -477,7 +477,7 @@
               alt="AI-powered SEO grade result from Tech Trends Blog showing Core Web Vitals optimization"
               width="232"
               height="193"
-              style="object-fit: contain; aspect-ratio: 232 / 193;"
+              style="object-fit: contain;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -536,7 +536,7 @@
               alt="SEO Desktop performance result after AI content and PageSpeed optimization on Tech Trends Blog"
               width="320"
               height="274"
-              style="object-fit: contain; aspect-ratio: 320 / 274; "
+              style="object-fit: contain;"
             />
           </picture>
         </div>
@@ -562,7 +562,7 @@
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
               width="248"
               height="255"
-              style="object-fit: cover; aspect-ratio: 248 / 255;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -592,7 +592,7 @@
               alt="Tech Trends Blog SEO grade result showing performance after optimization"
               width="248"
               height="255"
-              style="object-fit: cover; aspect-ratio: 248 / 255;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -622,7 +622,7 @@
               alt="Tech Trends Blog SEO Mobile grade result showing performance after optimization"
               width="320"
               height="274"
-              style="object-fit: contain; aspect-ratio: 320 / 274;"
+              style="object-fit: contain;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -651,7 +651,7 @@
               alt="Tech Trends Blog SEO Mobile grade result showing performance before optimization"
               width="248"
               height="255"
-              style="object-fit: cover; aspect-ratio: 248 / 255;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -680,7 +680,7 @@
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
               width="232"
               height="239"
-              style="object-fit: cover; aspect-ratio: 232 / 239;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -799,6 +799,7 @@
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
+              style="object-fit: contain;"
             />
           </picture>
         </div>
