--- a/pages/project2/project2-the-casestudy.html
+++ b/pages/project2/project2-the-casestudy.html
@@ -14,7 +14,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_737/v1748537741/sports-tube-desktop_c9qmdx.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1748537741/sports-tube-desktop_c9qmdx.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -24,7 +24,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_354/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -34,7 +34,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_287/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_574/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -44,7 +44,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220/v1748537741/sports-tube-mobile_j2lush.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1748537741/sports-tube-mobile_j2lush.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -448,7 +448,7 @@
             alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
             width="220"
             height="184"
-            style="aspect-ratio: 220 / 184; object-fit: cover;"
+            style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
@@ -774,7 +774,7 @@
             width="268" 
             height="116" 
             alt="Portrait of Genny Allison, Front-End Developer and SEO &AI Content Specialist at Allison Stock Inc."
-            style="aspect-ratio: 268 / 116; object-fit: contain;"
+            style="object-fit: contain;"
             loading="auto" 
             decoding="async" 
           />
@@ -796,7 +796,7 @@
         </div>
       </div>
     </main>
-     <div id="side-nav" class="hidden">
+    <div id="side-nav" class="hidden">
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project1/project1-intro.html#the-menu">the "menu"</a></li>
@@ -833,6 +833,7 @@
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
+              style-"object-fit: cover;"
             />
           </picture>
         </div>
