--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -14,7 +14,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_737/v1748537741/sports-tube-desktop_c9qmdx.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1474/v1748537741/sports-tube-desktop_c9qmdx.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -24,7 +24,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_354/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_708/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -34,7 +34,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_287/v1748537741/sports-tube-tablet_mkowrj.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_5747/v1748537741/sports-tube-tablet_mkowrj.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -44,7 +44,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_220/v1748537741/sports-tube-mobile_j2lush.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_440/v1748537741/sports-tube-mobile_j2lush.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -418,7 +418,7 @@
             alt="Responsive hero image of the Tech Trends Project design from Genny Allison’s AI Content and SEO portfolio"
             width="220"
             height="184"
-            style="aspect-ratio: 220 / 184; object-fit: cover;"
+            style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
@@ -457,7 +457,7 @@
               width="256"
               height="343"
               loading="auto"  
-              style="aspect-ratio: 256 / 242; object-fit: cover;"
+              style="object-fit: cover;"
               fetchpriority="auto"
               decoding="async"
             />
@@ -501,7 +501,7 @@
               width="256"
               height="343"
               loading="auto"  
-              style="aspect-ratio: 256 / 242; object-fit: cover;"
+              style="object-fit: cover;"
               fetchpriority="auto"
               decoding="async"
             />
@@ -546,7 +546,7 @@
               height="auto"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover; "
+              style="object-fit: cover;"
               decoding="async" 
             />
           </picture>
@@ -572,7 +572,7 @@
               height="auto"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover; "
+              style="object-fit: cover;"
               decoding="sync"   
             />
           </picture>
@@ -598,7 +598,7 @@
               height="auto"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: contain; "
+              style="object-fit: contain;"
               decoding="async" 
             />
           </picture>
@@ -683,6 +683,7 @@
               loading="lazy"
               fetchpriority="low"
               decoding="async" 
+              style-"object-fit: cover;"
             />
           </picture>
         </div>
